--- a/world-cup-main/style.css
+++ b/world-cup-main/style.css
@@ -24,3 +24,66 @@
     height: 1320px;
     height: 450px;
 }
+.main-body{
+    display: flex;
+    margin: 30px 70px;
+}
+.navigation{
+    width: 300px !important;
+    height: 200px;
+    background-color: #161616;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    border-radius: 10px;
+    margin-right: 20px;
+   
+}
+.nav-btn{
+background-color: white;
+border: 1px solid gray;
+padding: 10px 20px;
+margin: 10px 20px;
+border-radius: 10px;
+}
+.nav-blog{
+    background-color: #e71e1e;
+    color: white;
+}
+.blogs-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 20px;
+    column-gap: 20px;
+}
+.blogs-container img{
+    width: 280px;
+    height: 175px;
+}
+.blogs{
+    border: .2px solid rgb(241, 240, 240);
+    border-radius: 10px;
+}
+.blogs button{
+    padding: 5px;
+    margin-left: 15px;
+    margin-top: 15px;
+    border-radius: 3px;
+    height: 30px;
+    width: 80px;
+}
+.blogs h4{
+    margin-left: 15px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.icon{
+    display: flex;
+}
+.icon img{
+    width: 18px;
+    height: 18px;
+    margin-left: 15px;
+}
+.icon p{
+    margin-top: 5px;
+}
