responsive for mobile added

--- a/world-cup-main/style.css
+++ b/world-cup-main/style.css
@@ -21,7 +21,6 @@
     margin-bottom: 40px;
 }
 .banner-img img{
-    height: 1320px;
     height: 450px;
 }
 .main-body{
@@ -30,7 +29,7 @@
     margin-top: 100px;
 }
 .navigation{
-    width: 300px !important;
+    width: 300px;
     height: 200px;
     background-color: #161616;
     display: grid;
@@ -91,7 +90,7 @@ border-radius: 10px;
 .footer{
 background-color: #161616;
 color: white;
-height: 300px;
+height: 350px;
 margin-top: 100px;
 margin-left: 0px;
 margin-right: 0px;
@@ -113,4 +112,68 @@ margin-right: 0px;
     margin-left: 100px;
     margin-right: 100px;
    margin-top: 30px;
+}
+.social-media-icon{
+    display: flex;
+    justify-content: center;
+}
+.social-media-icon p{
+    font-size: 2em;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+@media only screen and (max-width: 576px){
+    .main-body{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .header{
+        display: flex;
+        flex-direction: column;
+        width: 310px;
+        height: 472px;
+        text-align: center;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 0%;
+        margin: auto;
+    }
+    .heading{
+        width: 258px;
+        height: 178px;
+    }
+    .heading p{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;  
+    }
+    .heading h1{
+        font-size: 22px;
+    }
+    .banner-img img{
+        max-width: 233px;
+        height: 280px;
+
+    }
+    .main-body{
+        display: flex;
+        flex-direction: column;
+    }
+    .blogs-container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        text-align: center;
+    }
+    .navigation{
+        background-color: transparent;
+        text-align: center;
+    }
+    .nav-footer{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .footer{
+        height: auto;
+    }   
 }
