google fonts added

--- a/world-cup-main/style.css
+++ b/world-cup-main/style.css
@@ -6,6 +6,9 @@
     80%  { background: #33CC36; }
     100% { background: #33CCCC; }
   }
+  body{
+    font-family: 'Poppins', sans-serif;
+  }
 .header{
     background-color: #161616;
     color: white;
